Fix ETH badge changing to the same color as the Axion badge when switching to dark mode (#28)

--- a/src/scss/_dark-colors.scss
+++ b/src/scss/_dark-colors.scss
@@ -24,10 +24,10 @@
   }
 
   &-purple {
-    color: $clPurple-dark !important;
+    color: $clPurple !important;
 
     &-bg {
-      background-color: $clPurple-dark !important;
+      background-color: $clPurple !important;
     }
   }
 
